syntax = "proto3";

package audit.cb;

option java_package = "com.sequenceiq.cloudbreak.audit.converter";
option java_outer_classname = "AuditEventDetailsProto";

/**
 * Details: AuditEventDetails|attempt
 */
message AuditEventDetails {
  // The Data Hub or Data Lake CRN
  string clusterCrn = 1;
  // The identity provider user ID provided by the identity provider to CDP. This user initiated the action.
  string userCrn = 2;
  // The environment CRN
  string environmentCrn = 3;
  // The long value of the event timestamp. Returns the time in milliseconds when the event happened.
  int64 timestamp = 4;
  // The name of the Data Hub or Data Lake resource
  string clusterName = 5;
  // The state of the resource creation flow<br>
  // DATAHUB_START
  // States for Data Hubs:<br>
  // INIT_STATE<br>
  // START_CREATION_EVENT<br>
  // CLUSTER_CREATION_FINISHED_EVENT<br>
  // STACK_CREATION_FAILED_STATE<br>
  // CLUSTER_CREATION_FAILED_STATE<br>
  // TERMINATION_EVENT<br>
  // TERMINATION_FINALIZED_EVENT<br>
  // TERMINATION_FAILED_STATE<br>
  // CLUSTER_TERMINATION_FAILED_STATE<br>
  // STACK_START_EVENT<br>
  // CLUSTER_START_FINISHED_STATE<br>
  // CLUSTER_START_FAILED_STATE<br>
  // START_FAILED_STATE<br>
  // STACK_STOP_EVENT<br>
  // STOP_FINALIZED_EVENT<br>
  // STOP_FAILED_STATE<br>
  // CLUSTER_STOP_FAILED_STATE<br>
  // MANUAL_STACK_REPAIR_TRIGGER_EVENT<br>
  // REPAIR_SERVICE_NOTIFIED_EVENT<br>
  // MANUAL_STACK_REPAIR_TRIGGER_FAILED_STATE<br>
  // DECOMMISSION_EVENT<br>
  // DOWNSCALE_FINALIZED_EVENT<br>
  // CLUSTER_DOWNSCALE_FAILED_STATE<br>
  // START_VALIDATION_FLOW_EVENT<br>
  // VALIDATION_FLOW_FINISHED_EVENT<br>
  // VALIDATION_FAILED_STATE<br>
  // DATAHUB_END
  // DATALAKE_START
  // States for Data Lakes:<br>
  // INIT_STATE<br>
  // START_CREATION_EVENT<br>
  // START_CREATION_EVENT<br>
  // CLUSTER_CREATION_FINISHED_EVENT<br>
  // STACK_CREATION_FAILED_STATE<br>
  // CLUSTER_CREATION_FAILED_STATE<br>
  // TERMINATION_EVENT<br>
  // TERMINATION_FINALIZED_EVENT<br>
  // TERMINATION_FAILED_STATE<br>
  // CLUSTER_TERMINATION_FAILED_STATE<br>
  // STACK_START_EVENT<br>
  // CLUSTER_START_FINISHED_STATE<br>
  // CLUSTER_START_FAILED_STATE<br>
  // START_FAILED_STATE<br>
  // STACK_STOP_EVENT<br>
  // STOP_FINALIZED_EVENT<br>
  // STOP_FAILED_STATE<br>
  // CLUSTER_STOP_FAILED_STATE<br>
  // ADD_INSTANCES_EVENT<br>
  // DECOMMISSION_EVENT<br>
  // FINALIZE_UPSCALE_STATE<br>
  // DOWNSCALE_FINALIZED_EVENT<br>
  // CLUSTER_UPSCALE_FAILED_STATE<br>
  // CLUSTER_DOWNSCALE_FAILED_STATE<br>
  // MANUAL_STACK_REPAIR_TRIGGER_EVENT<br>
  // REPAIR_SERVICE_NOTIFIED_EVENTMANUAL_STACK_REPAIR_TRIGGER_FAILED_STATE<br>
  // DECOMMISSION_EVENT<br>
  // DOWNSCALE_FINALIZED_EVENT<br>
  // CLUSTER_DOWNSCALE_FAILED_STATE
  // DATALAKE_END
  string flowState = 6;
  // The id of the resource creation flow
  string flowId = 7;
}